--- a/.gitignore
+++ b/.gitignore
@@ -304,3 +304,18 @@ TSWLatexianTemp*
 # option is specified. Footnotes are the stored in a file with suffix Notes.bib.
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib
+
+# Ignore all auxiliary LaTeX files
+overleaf/*.aux
+overleaf/*.log
+overleaf/*.out
+overleaf/*.toc
+overleaf/*.gz
+overleaf/*.fdb_latexmk
+overleaf/*.fls
+
+# Ignore Jupyter notebook checkpoints
+analysis/.ipynb_checkpoints/
+
+# Ignore private data
+private/
